--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>User Information Card</title>
 </head>
-<body>
+<body class="body">
     <div class="container">
         <div id="info-card">
             <h1>User Information Card</h1>
@@ -41,8 +41,11 @@
                 </div>
             </div>
         </div>
-    </div>
+        <!-- Add a button for toggling modes -->
 
+
+    </div>
+    <button id="mode-toggle">DarkMode</button>
     <script src="main.js"></script>
 </body>
 </html>
